option('tests', type : 'feature', value : 'auto',
  description : 'Tests (auto-disabled if a subproject)')

option('tupl_dev', type : 'feature', value : 'auto',
  description : 'Codegen; allow IREPEAT download, enable tupl_amalgam')

option('namespace_id', type : 'string', value : 'lml',
  description : 'The namespace id for this library')

option('tupl_max_arity', type : 'integer', min : 0, value : 0x10,
  description : 'The maximum tupl number of elements')

option('no_lupl', type : 'boolean', value : false,
  description : 'Do not generate lupl type or specializations')

option('snitch_cmake', type : 'boolean', value : true,
  description : 'Use cmake to configure snitch subproject dependency')
